# intervals-copilot

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: CLAUDE.md
.github/workflows/: deploy.yml
app/backend/climbers_journal/routers/: chat.py
app/backend/climbers_journal/services/: intervals.py  llm.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_intervals_activity_id.py  cc006a6af522_initial.py  d4e5f6a7b8c9_add_region_and_route_details.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  activity.py  route.py
backend/app/routers/: activities.py  chat.py  import_router.py  routes.py  stats.py
backend/app/services/: brave_search.py  intervals.py  llm.py  location.py
cli/: pyproject.toml
cli/journal/: api_client.py  chat.py  config.py  location.py  main.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activities/: page.tsx
frontend/src/app/activities/[id]/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/config/: route.ts
frontend/src/app/map/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: css.d.ts
loki/: loki-config.yml
nginx/: nginx.conf
plans/: 0000-climbers-journal-mvp.md
scripts/: call-nvidia-kimi-k2.5.py
