[project]
name = "climbers-journal-cli"
version = "0.1.0"
description = "Climbers Journal CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "pydantic-settings>=2.7.0",
]

[project.scripts]
journal = "journal.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["journal"]
